  convertToDate
  
* Auto-detection of date cells. Cells that "look" like dates will be converted to dates when reading from file.

* read.xlsx.Workbook to read from workbook objects

* colIndex, rowIndex added to read.xlsx to only read specified rows and columns

* Excel slicers now maintained by loadWorkbook

* fill styles extended to support gradientFill



BUG FIXES

* Encoding fixed and multi-byte characters now supported.

* read.xlsx now maintains multiple consecutive spaces and newline characters.

* convertToDate & convertToDateTime now handle NA values.

* multiple selected worksheet issue whioch preventing adding of new worksheets in Excel.

* zoom parameter now limited to [10, 400] and documentation updated.

* write.xlsx colnames parameter being assigned to rownames




openxlsx 2.1.3
----------------------------------------------------------------

NEW FEATURES

* conditionalFormatting type "databar"

* asTable parameter to write.xlsx to writing using writeDataTable.

* extended numFmt formatting to numeric rounding also added option("openxlsx.numFmt" = ...)
 for default number formatting of numeric columns

* additional numFmt "comma" to format numerics with "," thousands separator 

* tableName parameter to writeDataTable to assign the table a name

* headerStyle parameter to writeDataTable for additional column names styling

* textRotation parameter to createStyle to rotate cell text

* functions addFilter & removeFilter to add filters to columns

* Headers & footers extended, can now be set with addWorksheet and setHeaderFooter.
  setHeader & setFooter deprecated.  

* "fitToWidth" and "fitToHeight" logicals in pageSetup.

* "zoom" parameter in addWorksheet to set worksheet zoom level.

* "withFilter"" parameter to writeDataTable and writeData to remove table filters

* keepNa parameter to writeDataTable and writeData to write NA values as #N/A

* auto column widths can now be set with width = "auto"

VIGNETTE
