@@ -1,7 +1,7 @@
 Package: openxlsx
 Type: Package
 Title: Read, Write and Edit XLSX Files.
-Version: 2.3.23
+Version: 2.4.0
 Date: 2014-10-18
 Authors@R: c(
     person("Alexander", "Walker",
